# floy-dns

./: .env  .gitignore  Cargo.toml
src/: cloudflare.rs  config.rs  endpoints.rs  errors.rs  jwt.rs  main.rs  models.rs  nginx.pest  utils.rs  writers.rs
src/cloudflare/: cloudflare.rs
src/common/: errors.rs  jwt.rs  mod.rs  utils.rs  writers.rs
src/parser/: parser.rs
src/updater/: updater.rs
