[package]
name = "floy-dns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
jsonwebtoken = "7"
serde = { version = "1.0.125", features = ["derive"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"] }
bcrypt = "0.14.0"
tokio = { version = "1.16", features = ["full"] }
chrono = "0.4.19"
reqwest = { version = "0.11.16", features = ["json"] }
lettre = { version = "0.10.0-rc.6", features = ["tokio1", "tokio1-native-tls"] }
dotenv = "0.15.0"
serde_json = "1.0.140"
pest = "2.7.15"
pest_derive = "2.7.15"